# pyheroicons

./: .gitignore  LICENSE  MANIFEST.in  README.md  build  pyproject.toml
.github/workflows/: lint_and_test.yml  test.yml
pyheroicons/: __init__.py
src/: pyheroicons.py
tests/: test_pyheroicons.py
