[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyheroicons"
version = "1.1.0"
authors = [
  { name="Burak Yilmaz", email="burakyilmaz321@gmail.com" },
]
description = "Ready to use Tailwindcss Heroicons components for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "pytest",
    "tox",
    "tox-gh-actions",
]

[project.urls]
"Homepage" = "https://github.com/burakyilmaz321/pyheroicons"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310", "py311"]
include = "src"

[tool.isort]
profile = "black"
line_length = 79
skip = [".venv/", "icons/"]

[tool.ruff]
line-length = 79
select = ["F", "E", "W", "I", "N"]
exclude = [
    ".venv/",
    "icons/",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py38, py39, py310, py311

    [testenv]
    deps = pytest
    commands = pytest --verbose --color=yes

    [gh-actions]
    python =
        "3.8": py38
        "3.9": py39
        "3.10": py310
        "3.11": py311
"""

[tool.setuptools.packages]
find = {}
